# WGS_UTM_converter

./: CMakeLists.txt  README.md  main.cpp
include/: Config.h  Constants.hpp  MGRS.hpp  Math.hpp  PolarStereographic.hpp  TransverseMercator.hpp  UTMUPS.hpp  Utility.hpp
src/: MGRS.cpp  Math.cpp  PolarStereographic.cpp  TransverseMercator.cpp  UTMUPS.cpp  Utility.cpp
